2008-09-02  Sancho Lerena <slerena@gmail.com>

	*  extensions/update_manager*: Updated GPL header. Added 
	more text about Update Manager anonymous information gathering.

2008-09-02  Esteban Sanchez  <estebans@artica.es>

	* extensions/update_manager.php: Style correction. Removed force
	updating of the settings.

	* extensions/update_manager/load_updatemanager.php: Run the keygen if
	the user is not the free one.

	* extensions/update_manager/main.php: Show information message to free
	users.

	* extensions/update_manager/settings.php: Allow updating keygen and
	binary path settings.

	* extensions/update_manager/lib/*: Updated to latest version of Open
	Update Manager.

	* extensions/update_manager/sql/update_manager.sql: Set keygen path.

	* godmode/extensions.php: Bug solved that was avoiding to show defined
	extensions. Fixed ACL check.

2008-09-02  Esteban Sanchez  <estebans@artica.es>

	* reporting/fgraph.php: Rollback to r1049. It still needs some tests,
	will be readded in next Pandora major version.

	* reporting/pandora_graph.php, reporting/pearimage_graph.php: Deleted
	from repository.

2008-09-01  Esteban Sanchez  <estebans@artica.es>

	* extensions/update_manager/load_updatemanager.php: Typo error fixed.

2008-09-01  Esteban Sanchez  <estebans@artica.es>
	
	* extensions/update_manager.php,
	extensions/update_manager/sql/update_manager.sql: Fixed update server
	path typo error.

	* extensions/update_manager/load_updatemanager.php: Force values to be
	integer.

2008-09-01  Raul Mateos  <raulofpandora@gmail.com>

	* operation/snmp/snmp_console/snmp_view.php: Added style to buttons.

2008-09-01  Esteban Sanchez  <estebans@artica.es>

	* extensions/update_manager.php: Get user key with the function
	instead of the unexistent keygen.

2008-09-01  Esteban Sanchez  <estebans@artica.es>

	* extensions/update_manager/sql/update_manager.sql,
	extensions/update_manager.php: Updated server info to
	the final Update manager host.
